<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expense tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_id">User ID</string>
    <string name="pwd">Pwd</string>
    <string name="ok">OK</string>
    <string name="new_user_">New User ?</string>
    <string name="enter_the_access_credentials">Enter the access credentials</string>
    <string name="userID_hint">Enter your user ID</string>
    <string name="pass_hint">Enter password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_forgot_pass">Forgot Password ?</string>
    <string name="enter_user_id">Enter user ID</string>
    <string name="get_password">Get Password</string>
    <string name="title_activity_new_user">New User Form</string>
    <string name="reset">Reset</string>
    <string name="fill_the_details_to_register_new_user">Fill the details to register new user</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re enter Password</string>
    <string name="enter_email_id">Enter email ID</string>

</resources>
