<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewUserActivity" >

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="24dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/enter_email_id" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/re_enter_password" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_edittext"
        android:layout_below="@+id/email_edittext"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/enter_user_id" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/enter_password" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_edittext"
        android:layout_alignParentTop="true"
        android:text="@string/fill_the_details_to_register_new_user"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button 
        android:id="@+id/nuser_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText4"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="37dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/nuser_reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nuser_ok_button"
        android:layout_alignRight="@+id/editText4"
        android:text="@string/reset" />

</RelativeLayout>
