<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PwdActivity" >

    <EditText
        android:id="@+id/user_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="131dp"
        android:ems="10"
        android:hint="@string/userID_hint" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pass_edittext"
        android:layout_alignParentLeft="true"
        android:text="@string/user_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pass_edittext"
        android:layout_alignParentLeft="true"
        android:text="@string/pwd"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/pass_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_edittext"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/user_edittext"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass_edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/fpassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ok_button"
        android:layout_below="@+id/ok_button"
        android:layout_marginTop="38dp"
        android:text="@string/title_activity_forgot_pass"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:text="@string/enter_the_access_credentials"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/nuserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fpassText"
        android:layout_below="@+id/fpassText"
        android:layout_marginTop="14dp"
        android:text="@string/new_user_"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
